# smartthings-api-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: turn_everything_on.rs
src/: client.rs  command.rs  command_batch.rs  lib.rs
src/capabilities/: color_control.rs  mod.rs  switch.rs  switch_level.rs
src/objects/: device.rs  devices.rs  location.rs  locations.rs  mod.rs  room.rs  rooms.rs
src/traits/: capability.rs  into_uuid.rs  mod.rs
src/utils/: mod.rs  no_debug.rs
